--- a/main.css
+++ b/main.css
@@ -1,12 +1,28 @@
 @font-face {
+    font-family: Casagrande-Bold;
+    src: url(fonts/CasagrandeAntifascista-Bold_0.ttf);
+}
+
+@font-face {
     font-family: Casagrande;
-    src: url(CasagrandeAntifascista-Bold_0.ttf);
+    src: url(fonts/CasagrandeAntifascista-Medium_0.ttf);
+}
+
+@font-face {
+    font-family: Casagrande-Reg;
+    src: url(fonts/CasagrandeAntifascista-Regular_0.ttf);
+}
+
+@font-face {
+    font-family: Arista-Bold;
+    src: url(fonts/AristaPro-Bold.ttf);
 }
 
 body {
     max-width:1200px;
     margin:auto;
     background-image:url(grain.png);
+    background-size: 0.5;
     background-repeat:repeat;
 }
 
@@ -22,6 +38,16 @@ h1::after {
     width:300px;
     margin: 0 1rem;
     transform: translateY(-1rem);
+    border-radius:2px;
+}
+
+h2 {
+    font-size: 4rem;
+    display: inline-block;
+    content: "";
+    border-top: 2px solid #242424;
+    width:200px;
+    margin: 0 1rem;
     border-radius:2px;
 }
 
@@ -62,7 +88,7 @@ favorites {
     justify-content:center;
 }
 
-favtext {
+headers {
     display:flex;
     justify-content:space-evenly;
 }
@@ -70,22 +96,35 @@ favtext {
 txt {
     font-family:Casagrande;
     font-size:50px;
-    color:#f36983; 
+    color:#f36983;
+}
+
+txt:hover {
+    cursor: default;
 }
 
 .card {
-    margin-left:8px;
-    margin-right:8px;
+    margin:5px;
+}
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
+
+.a:hover {
+    cursor:pointer;
 }
 
 name {
     margin-top:5px;
     display:flex;
     justify-content:space-evenly;
-    font-family:Casagrande;
+    font-family:Casagrande-Bold;
     font-size:25px;
     color:#0e0e0e;
     text-align:center;
+    text-decoration:none;
 }
 
 tagpl {
@@ -96,26 +135,83 @@ tagpl {
 tag {
     margin-top:5px;
     padding:2px 10px;
-    font-family:Casagrande;
-    font-size:25px;
+    font-family:Casagrande-Reg;
+    font-size:19px;
     color:#ffffff;
-    background:#ff401e;
+    background:#f36983;
     text-align:center;
-    border-radius:20px;
+    border-radius:20px 20px 20px 20px;
+    text-decoration:none;
 }
 
 footer {
     display:flex;
-    justify-content:space-evenly;
+    align-items:center;
+    justify-content:space-between;
     margin-top:20px;
-    padding:20px 0 5px 0;
+    padding:20px 50px 5px 50px;
     background-color:#646464;
     border-radius:50px 50px 0 0;
 }
 
-warning {
+[text] {
     font-family:Casagrande;
     font-size:14px;
     color:#242424;
     text-align:center;
+}
+
+[text]::after {
+    content: attr(text);
+}
+
+news {
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+}
+
+nn:hover {
+    cursor:default;
+}
+
+new-box {
+    margin:5px;
+    display:flex;
+    width:310px;
+    height:150px;
+    background:#ffffff;
+    border-radius:30px;
+    border:5px solid #f36983;
+}
+
+.rigth {
+    margin-left:-20%;
+    clip-path:xywh(20% 0 80% 100% round 27px 20px 20px 27px);
+}
+
+ttt {
+    display:flex;
+    align-items:center;
+    height:160px;
+}
+
+main-txt {
+    font-family:Arista-Bold;
+    font-size:55px;
+    color:#262626;
+    margin-left:-5%;
+    line-height:45px;
+    text-size-adjust:80%;
+}
+
+time {
+    margin:120px 10px;
+    position:absolute;
+    font-family:Arista-Bold;
+    font-size:15px;
+    color:#ffffff;
+    padding:5px;
+    background:#000000be;
+    border-radius:10px;
 }
