--- a/animation.css
+++ b/animation.css
@@ -1,3 +1,18 @@
+fl {
+    animation-duration: 4s;
+    animation-name: Appear;
+}
+
+@keyframes Appear {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity:1;
+    }   
+}
+
 st {
     animation-duration:1s;
     animation-name:app-start;
