--- a/main.css
+++ b/main.css
@@ -145,13 +145,14 @@ tag {
 }
 
 footer {
-    display:flex;
+    display:fixed;
     align-items:center;
     justify-content:space-between;
     margin-top:20px;
     padding:20px 50px 5px 50px;
     background-color:#646464;
     border-radius:50px 50px 0 0;
+    bottom:0;
 }
 
 [text] {
@@ -187,7 +188,8 @@ new-box {
 
 .rigth {
     margin-left:-20%;
-    clip-path:xywh(20% 0 80% 100% round 27px 20px 20px 27px);
+    clip-path:xywh(20% 0 80% 100% round 25px 0 0 25px);
+    mask-image: linear-gradient(90deg, black 50%, #ffffff00);
 }
 
 ttt {
@@ -198,7 +200,7 @@ ttt {
 
 main-txt {
     font-family:Arista-Bold;
-    font-size:55px;
+    font-size:50px;
     color:#262626;
     margin-left:-5%;
     line-height:45px;
@@ -214,4 +216,57 @@ time {
     padding:5px;
     background:#000000be;
     border-radius:10px;
+}
+
+tournaments {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    margin:20px 0;
+}
+
+tourbox {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    padding:20px;
+    border:5px solid #f36983;
+    border-radius:20px;
+    background:white;
+    width:200px;
+    margin:5px;
+}
+
+tourabbr {
+    font-family:Casagrande-Bold;
+    font-size:40px;
+    text-align:center;
+    line-height: 30px;    
+}
+
+los {
+    font-family:Arista-Bold;
+    font-size:30px;
+    color:red;
+    line-height:30px;
+}
+
+resbl {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center;    
+    padding:10px 5px;
+    border:2px solid #f36983;
+    border-radius:12px;
+}
+
+vs {
+    font-family:Arista-Bold;
+    font-size:20px;
+}
+
+res {
+    font-family:Arista-Bold;
+    font-size:20px;
 }
