--- a/main.css
+++ b/main.css
@@ -1,23 +1,3 @@
-@font-face {
-    font-family: Casagrande-Bold;
-    src: url(fonts/CasagrandeAntifascista-Bold_0.ttf);
-}
-
-@font-face {
-    font-family: Casagrande;
-    src: url(fonts/CasagrandeAntifascista-Medium_0.ttf);
-}
-
-@font-face {
-    font-family: Casagrande-Reg;
-    src: url(fonts/CasagrandeAntifascista-Regular_0.ttf);
-}
-
-@font-face {
-    font-family: Arista-Bold;
-    src: url(fonts/AristaPro-Bold.ttf);
-}
-
 body {
     max-width:1200px;
     margin:auto;
@@ -145,9 +125,9 @@ tag {
 }
 
 footer {
-    display:flex;
+    display:grid;
+    text-align:center;
     align-items:center;
-    justify-content:space-between;
     margin-top:20px;
     padding:20px 50px 5px 50px;
     background-color:#646464;
@@ -158,7 +138,7 @@ footer {
 [text] {
     font-family:Casagrande;
     font-size:14px;
-    color:#242424;
+    color:#303030;
     text-align:center;
 }
 
@@ -312,4 +292,69 @@ com {
     font-size:20px;
     color:white;
     text-shadow: 1px 1px 5px black;
+}
+
+tour {
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+}
+
+tourbox {
+    display:flex;
+    justify-content:space-around;
+    flex-wrap:wrap;
+    width:200px;
+    padding:10px;
+    margin:10px;
+    border-radius:20px;
+    background-color:#f36983;
+}
+
+tourbox:hover {
+    cursor:default;
+}
+
+abbr {
+    font-family:Casagrande-Bold;
+    font-size:42px;
+    color:white;
+}
+
+res {
+    border-radius:30px;
+    background:white;
+    padding:0 10px;
+    font-family:Casagrande;
+    font-size:30px;
+    color:var(--result-color);
+}
+
+last {
+    display:grid;
+    justify-content:space-around;
+    text-align:center;
+    flex-wrap:wrap;
+    padding:7px 2px;
+    border-radius:3px 3px 10px 10px;
+    background-color:white;
+    width:200px;
+}
+
+lstxt {
+    padding:12px 0 5px 0;
+}
+
+lstxt::before {
+    font-family:Arista-Bold;
+    font-size:22px;
+    color:white;
+    content:"Last Match";
+}
+
+vs {
+    font-family:Arista;
+    font-size:19px;
+    color:black;
+    line-height:17px;
 }
